--- a/Tenta/Tenta/packages.config
+++ b/Tenta/Tenta/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="AngularJS.Core" version="1.3.2" targetFramework="net451" />
   <package id="AngularJS.Route" version="1.3.2" targetFramework="net451" />
+  <package id="bootstrap" version="3.0.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
+  <package id="jQuery" version="1.9.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net451" />
@@ -12,4 +14,5 @@
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
+  <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net451" />
 </packages>
